dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secure-dev
  labels:
    app.kubernetes.io/managed-by: gitops
    environment: dev
