dev/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: secure-dev  
spec:
  podSelector: {} 
  policyTypes:
  - Ingress
  - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-web
  namespace: secure-dev
spec:
  podSelector:
    matchLabels:
      app: secure-app # 
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: frontend # 
    ports:
    - protocol: TCP
      port: 8080 #
